Add in the USCIS watermark

--- a/USCISTracker/USCISTracker/Views/DetailPage.xaml
+++ b/USCISTracker/USCISTracker/Views/DetailPage.xaml
@@ -125,6 +125,13 @@
                    Margin="10"
                    TextWrapping="WrapWholeWords"></TextBlock>
         
+        <!--Some stuffs-->
+        <TextBlock x:Name="USCISLabel"
+                                   RelativePanel.AlignRightWithPanel="True"
+                                   RelativePanel.AlignBottomWithPanel="True"
+                                   Text="Data from USCIS.gov"
+                                   Padding="10"
+                   Foreground="DarkGray"></TextBlock>
     </RelativePanel>
 </Page>
 
