Updated logo and updated Title on Main page

--- a/USCISTracker/USCISTracker/Views/MainPage.xaml
+++ b/USCISTracker/USCISTracker/Views/MainPage.xaml
@@ -99,7 +99,7 @@
             </Grid.RowDefinitions>
 
             <TextBlock x:Name="PageTitle" 
-                       Text="My USCIS Case" 
+                       Text="My USCIS Cases" 
                        Grid.Row="0" 
                        Style="{ThemeResource TitleTextBlockStyle}"
                        VerticalAlignment="Center"
