--- a/USCISTracker/USCISTracker/Views/SettingsPage.xaml
+++ b/USCISTracker/USCISTracker/Views/SettingsPage.xaml
@@ -80,6 +80,24 @@
                                       RelativePanel.AlignLeftWithPanel="True"
                                       RelativePanel.Below="UseShellDrawnBackButtonToggleSwtich" />
 
+                        <TextBox x:Name="DeleteCacheLabelTextBox"
+                                 Margin="0,0,0,0"
+                                 HorizontalAlignment="Left"
+                                 RelativePanel.AlignLeftWithPanel="True"
+                                 RelativePanel.Below="UseLightThemeToggleSwitch"
+                                 Text="Delete Cache"
+                                 BorderThickness="0"
+                                 Padding="0,5,5,5" MinWidth="0" MinHeight="0"></TextBox>
+
+                        <Button x:Name="DeleteCacheButton"
+                                HorizontalAlignment="Left"
+                                RelativePanel.RightOf="DeleteCacheLabelTextBox"
+                                RelativePanel.Below="UseLightThemeToggleSwitch"
+                                Content="Delete"
+                                Margin="12,0,0,0" BorderThickness="0" Padding="5"></Button>
+
+
+
                         <!--<TextBox x:Name="BusyTextTextBox" Width="200"
                                  Margin="0,12,0,0" HorizontalAlignment="Left"
                                  Header="Busy text" RelativePanel.AlignLeftWithPanel="True"
